<resources>
    <string name="app_name">Face Lock</string>
    <string name="login_label">Face Lock</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_forgot">Forgot Password</string>
    <string name="login_register">Sign Up</string>
    <string name="register_label">Sign Up</string>
    <string name="register_done">Done</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm">Confirm Password</string>
    <string name="register_register">Sign Up</string>
    <string name="forgot_email">Email</string>
    <string name="forgot_reset">Reset Password</string>
    <string name="forgot_hint">*</string>
    <string name="forgot_password">New Password</string>
    <string name="forgot_confirm">Confirm New Password</string>
    <string name="forgot_set">Set New Password</string>
    <string name="phone_label">Add Phone</string>
    <string name="phone_text">First, you\'ll need to give this phone a name.</string>
    <string name="phone_uploading">Uploading</string>
    <string name="phone_wait">Please wait</string>
    <string name="phone_name">Phone name</string>
    <string name="phone_add_phone">Add Phone</string>
    <string name="home_label">Face Lock Home</string>
    <string name="home_downloading_phones">Downloading Phones</string>
    <string name="home_downloading_users">Downloading Users</string>
    <string name="home_wait">Please wait</string>
    <string name="home_loading_users">Loading users please wait...</string>
    <string name="home_users">Users</string>
    <string name="home_phones">Phones</string>
    <string name="home_start">Enable Protection</string>
    <string name="home_stop">Disable Protection</string>
    <string name="home_settings">Settings</string>
    <string name="settings_label">Settings</string>
    <string name="settings_done">Done</string>
    <string name="settings_scan_frequency">Scan Frequency</string>
    <string name="settings_safe_mode_duration">Safe Mode Duration</string>
    <string name="settings_lock_down">Lock Down</string>
    <string name="settings_alarm_title">Play siren on lock down</string>
    <string name="settings_alarm_description">Phone will play a siren when an unauthorized user is detected.</string>
    <string name="settings_max_volume_title">Play siren at max volume</string>
    <string name="settings_max_volume_description">Plays the siren at maximum volume instead of current audio volume.</string>
    <string name="add_label">Add User</string>
    <string name="add_done">Done</string>
    <string name="add_text">Time to register yourself! First enter your name, then, use the button to take a picture of your face!</string>
    <string name="add_text_after">Looking good!</string>
    <string name="add_name">Name</string>
    <string name="add_add_image">Add Image</string>
    <string name="add_replace_image">Replace Image</string>
    <string name="edit_label">Manage Phones</string>
</resources>