<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/phone_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/phone_text"
        android:gravity="center"/>
    <EditText
        android:id="@+id/phone_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:hint="@string/phone_name"/>
    <Button
        android:id="@+id/phone_add_phone"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:background="@color/snsStatusBar"
        android:textColor="@android:color/white"
        android:text="@string/phone_add_phone"/>
</LinearLayout>