<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal">
    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_margin="32dp"
        android:src="@drawable/ic_logo"/>
    <EditText
        android:id="@+id/forgot_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/forgot_email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
    <Button
        android:id="@+id/forgot_reset"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="12dp"
        android:background="@color/snsStatusBar"
        android:textColor="@android:color/white"
        android:text="@string/forgot_reset"/>
    <LinearLayout
        android:id="@+id/forgot_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:layout_height="60dp"
                android:layout_width="48dp"
                android:background="@drawable/rectangle"
                android:gravity="center">
                <TextView
                    android:id="@+id/forgot_code0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/forgot_hint"
                    android:textColor="@android:color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:layout_height="60dp"
                android:layout_width="48dp"
                android:background="@drawable/rectangle"
                android:gravity="center">
                <TextView
                    android:id="@+id/forgot_code1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/forgot_hint"
                    android:textColor="@android:color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:layout_height="60dp"
                android:layout_width="48dp"
                android:background="@drawable/rectangle"
                android:gravity="center">
                <TextView
                    android:id="@+id/forgot_code2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/forgot_hint"
                    android:textColor="@android:color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:layout_height="60dp"
                android:layout_width="48dp"
                android:background="@drawable/rectangle"
                android:gravity="center">
                <TextView
                    android:id="@+id/forgot_code3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/forgot_hint"
                    android:textColor="@android:color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:layout_height="60dp"
                android:layout_width="48dp"
                android:background="@drawable/rectangle"
                android:gravity="center">
                <TextView
                    android:id="@+id/forgot_code4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/forgot_hint"
                    android:textColor="@android:color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:layout_height="60dp"
                android:layout_width="48dp"
                android:background="@drawable/rectangle"
                android:gravity="center">
                <TextView
                    android:id="@+id/forgot_code5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/forgot_hint"
                    android:textColor="@android:color/white"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <EditText
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/forgot_password"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        android:textColor="@android:color/white"
        android:textAppearance="@style/password_text"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/forgot_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/forgot_confirm"
        android:inputType="textPassword"
        android:imeOptions="actionSend"
        android:textColor="@android:color/white"
        android:textAppearance="@style/password_text"
        android:visibility="gone"/>
    <Button
        android:id="@+id/forgot_set"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="12dp"
        android:background="@color/snsStatusBar"
        android:textColor="@android:color/white"
        android:text="@string/forgot_set"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/forgot_code_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="number"
        android:maxLength="6"
        android:imeOptions="actionNext"/>
</LinearLayout>