<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="32dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="@android:color/white"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/home_users"
                    android:textColor="@android:color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/home_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:id="@+id/home_loading_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@android:color/white">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/home_loading_users"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@android:color/black"
                    android:visibility="visible" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="4dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="@android:color/white"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_phones"
                    android:textColor="@android:color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/home_phones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/home_start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:textColor="@android:color/black"
                    android:text="@string/home_start"/>
                <Button
                    android:id="@+id/home_stop"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:textColor="@android:color/black"
                    android:text="@string/home_stop"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end" >
        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            fab:fab_addButtonColorNormal="@color/snsAccent"
            fab:fab_addButtonColorPressed="@color/snsAccentDark"
            fab:fab_addButtonPlusIconColor="@android:color/white"
            fab:fab_labelStyle="@style/menu_labels_style">
            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/home_edit_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_title="Edit Phone"
                fab:fab_icon="@drawable/baseline_phonelink_setup_white_48dp"
                fab:fab_colorNormal="@color/snsAccent"
                fab:fab_colorPressed="@color/snsAccentDark" />
            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/home_new_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_title="New User"
                fab:fab_icon="@drawable/baseline_person_add_white_48dp"
                fab:fab_colorNormal="@color/snsAccent"
                fab:fab_colorPressed="@color/snsAccentDark"/>
        </com.getbase.floatingactionbutton.FloatingActionsMenu>
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>